# aomr

./: .dockerignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
control/control_4ws/control_4ws/: CMakeLists.txt  package.xml
control/control_4ws/control_4ws/src/: car_control.cpp
localization/LIO-SAM-LOC-ROS2-REFACTORING/: CMakeLists.txt
localization/LIO-SAM-LOC-ROS2-REFACTORING/config/: params.yaml  rviz2.rviz
localization/LIO-SAM-LOC-ROS2-REFACTORING/include/lio_sam/: FeatureExtraction.h  ImageProjection.h  MapOptimization.h
localization/LIO-SAM-LOC-ROS2-REFACTORING/include/lio_sam/utils/: CoordinateTransformationSolver.h  ParamServer.h  pclType.h
localization/LIO-SAM-LOC-ROS2-REFACTORING/launch/: run.launch.py
localization/LIO-SAM-LOC-ROS2-REFACTORING/src/components/: FeatureExtraction.cpp  ImageProjection.cpp  ImuPreintegration.cpp  MOGlobalMatching.cpp  MOInitializer.cpp  MOLocalization.cpp  MOPublish.cpp  MOVisualize.cpp  MapOptmization.cpp
localization/LIO-SAM-LOC-ROS2-REFACTORING/src/nodes/: nodeMO.cpp
localization/LIO-SAM-LOC-ROS2-REFACTORING/src/utils/: QoS.cpp
localization/LIO-SAM-ROS2-REFACTORING/: CMakeLists.txt
localization/LIO-SAM-ROS2-REFACTORING/config/: params.yaml
localization/LIO-SAM-ROS2-REFACTORING/launch/: run.launch.py
localization/LIO-SAM-ROS2-REFACTORING/src/components/: ImuPreintegration.cpp
localization/robot_localization/: CMakeLists.txt
localization/robot_localization/include/robot_localization/: navsat_transform.hpp
localization/robot_localization/src/: navsat_transform.cpp
localization/robot_localization/srv/: GetDatum.srv
orbit_planner/: CMakeLists.txt  README.md  package.xml
orbit_planner/config/: orbit_planner_params.yaml
orbit_planner/include/orbit_planner/: advanced_path_planner.hpp  frontier_detector.hpp  learning_based_explorer.hpp  orbit_anchor_generator.hpp  orbit_panel_plugin.hpp  orbit_planner_node.hpp  orbit_voxblox_interface.hpp  orchard_specialized_planner.hpp  path_planner.hpp  tree_clusterer.hpp
orbit_planner/launch/: orbit_exploration.launch.py
orbit_planner/rviz/: orbit_panel_plugin.xml  orbit_planner.rviz
orbit_planner/src/: frontier_detector.cpp  orbit_anchor_generator.cpp  orbit_panel_plugin.cpp  orbit_planner_node.cpp  orbit_voxblox_interface.cpp  path_planner.cpp  tree_clusterer.cpp
orbit_planner/test/: test_orbit_planner.cpp
utils/Isaac_ml/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
utils/Isaac_ml/config/: isaac_sim_settings.yaml  path_planner.yaml  unstructured_orchard.yaml
utils/Isaac_ml/launch/: launch_sim.launch.py
utils/Isaac_ml/map/: map_data.txt  map_data.yaml  map_vertex.yaml  map_vertex_test.yaml
utils/Isaac_ml/scripts/: .output.log.swp  drone_local_path.py  four_ws_control.py  four_ws_control_pos.py  keyboard_teleop.py  start_sim.py  start_sim_test.py  state_machine.py  tree_world.py
utils/Isaac_ml/src/: 2d_map_graph.gui.cpp  2d_map_graph.gui.hpp  local_costmap_node.cpp  nav_goal_action_server.cpp  path_planner_node.cpp  state_machine.cpp  topology_path.cpp
utils/Isaac_ml/urdf/: drone_frame.urdf  kimm_4ws.urdf  kimm_city.urdf  orchard_ugv.urdf  rover.urdf
utils/kimm_orchard/: CMakeLists.txt  README.md  package.xml
utils/kimm_orchard/launch/: bringup.launch.py
utils/kimm_orchard/scripts/: .odom.py.swp  empty_map_publisher.py  goal_pose_flag.cpp  mappub.py  odom.py  odom_lidar.py  rover_joint_publisher.cpp  utm_publisher.py
utils/kimm_orchard/scripts/path_debug/: local_path_publisher.py
utils/kimm_orchard/src/: local_path_publisher.cpp  state_machine.cpp  state_machine_nav2.cpp
utils/pcd_cal/: CMakeLists.txt  package.xml
utils/pcd_cal/config/: tree_grid_real_gps.yaml  tree_grid_sim.yaml  visualization_pcd_file.yaml
utils/pcd_cal/launch/: launch_gps.launch.py  launch_sim.launch.py  visualization_pcd.launch.py
utils/pcd_cal/maps/: map_tree.yaml  v1.py  visual.py
utils/pcd_cal/rviz/: visualization_pcd.rviz
utils/pcd_cal/script/: tree_gui.py
utils/pcd_cal/src/: laser_scan.cpp  map_rotate.cpp  map_to_pcl_parser.cpp  map_to_pcl_parser_sim.cpp  pcd_visualization.cpp
utils/pointcloud_crop/: CMakeLists.txt  package.xml
utils/pointcloud_crop/src/: crop_node.cpp
waypoint_arm_following/goal_pose_manager/: CMakeLists.txt  package.xml
waypoint_arm_following/goal_pose_manager/json/: rover_pose_log.json
waypoint_arm_following/goal_pose_manager/launch/: goal_pose_manager_launch.py
waypoint_arm_following/goal_pose_manager/src/: goal_pose_generator_node.cpp  rover_pose_loader_node.cpp  rover_pose_logger_node.cpp
waypoint_arm_following/interface_rb10_apple/: CMakeLists.txt  package.xml
waypoint_arm_following/interface_rb10_apple/action/: RobotJointControl.action  RobotModeControl.action  RobotTcpControl.action  RobotTrackingControl.action
waypoint_arm_following/interface_rb10_apple/msg/: ArucoPose.msg  RobotJointPosition.msg
waypoint_arm_following/interface_rb10_apple/srv/: RobotConnectControl.srv
waypoint_arm_following/pkg_rb10_apple/: package.xml  readme.txt  setup.cfg  setup.py
waypoint_arm_following/pkg_rb10_apple/launch/: rb10_roas.launch.py
waypoint_arm_following/pkg_rb10_apple/pkg_rb10_apple/robot_control/: cobot.py  robot_connect_control_server.py  robot_info_publisher.py  robot_joint_control_server.py  robot_mode_control_client.py  robot_mode_control_server.py  robot_tcp_control_server.py  robot_tracking_aruco_server.py
