<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbit_planner</name>
  <version>1.0.0</version>
  <description>Autonomous exploration planner for orchard environments using Voxblox mapping and frontier-based exploration</description>
  
  <maintainer email="developer@example.com">Orbit Planner Team</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/your-repo/orbit_planner</url>
  <url type="repository">https://github.com/your-repo/orbit_planner</url>
  <url type="bugtracker">https://github.com/your-repo/orbit_planner/issues</url>
  
  <author email="developer@example.com">Orbit Planner Team</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- RViz2 Dependencies -->
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_visualization_tools</depend>
  <depend>rviz_default_plugins</depend>
  
  <!-- PCL Dependencies -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <!-- Eigen3 for Voxblox -->
  <depend>eigen3_cmake_module</depend>
  
  <!-- Service Dependencies -->
  <depend>std_srvs</depend>
  
  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/rviz/orbit_panel_plugin.xml"/>
  </export>
</package>
